--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ html body {
 
 .block{
   display: block;
-
+  margin: 5px;
 }
 
 .products img{
@@ -134,6 +134,6 @@ html body {
 }
 
 .margin10{
-  padding: 10px; 
-  
+/*  padding: 10px; 
+  */
 }
