--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,21 @@ html body {
   background-position:center center; /*정가운데 위치하도록함*/
 }
 
+.cotainer{
+  height:800px;
+  background-image: url("https://i.ibb.co/48zSTb5/1440-800.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+
+.image{
+  margin-left: 160px;
+  background-image: url("https://i.ibb.co/KzfYXnv/560-720.png");
+  float: left;
+  vertical-align: middle;
+}
+
 /* 제품 */
 
 .products h3{
