--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,8 @@ html body {
   background-position:center center; /*정가운데 위치하도록함*/
 }
 
-.cotainer{
-  height:800px;
+.container{
+  height:800px; 
   background-image: url("https://i.ibb.co/48zSTb5/1440-800.png");
   background-repeat: no-repeat;
   background-size: cover;
