--- a/css/style.css
+++ b/css/style.css
@@ -89,18 +89,7 @@ html body {
   margin-right:auto;
 }
 
-.product {
-  text-align:center;
-  width:225px;
-  display:block;/*a태그의 위치를 제대로 잡아주기 위한 속성*/
-  color:#545454;
-  text-decoration:none;
-  float:left;
-  margin-left:10px;
-  margin-right:10px;
-}
-
-.product img{
+.product img{s
   width: 240px;
   height: 240px;
   overflow: hidden;
