--- a/css/style.css
+++ b/css/style.css
@@ -89,16 +89,13 @@ html body {
   margin-right:auto;
 }
 
-.product img{s
+.product img{
   width: 240px;
   height: 240px;
   overflow: hidden;
+  margin: 10px;
 }
 
-.product-name{
-  margin-top:20px;
-  margin-bottom:4px;
-}
 
 .clearfix{
   clear:both;/*빈태그를 만들어 float를 해제*/
