--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ html body {
 
 .container{
   height:800px; 
-  width: 100%
+  width: 100%;
   background-image: url("https://i.ibb.co/48zSTb5/1440-800.png");
   background-repeat: no-repeat;
   background-size: cover;
