--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ html body {
 
 .image{
   margin-left: 160px;
+  width: 35%;
   background-image: url("https://i.ibb.co/KzfYXnv/560-720.png");
   float: left;
   vertical-align: middle;
